pkg/safeguards/tests/testmanifests/expected-subchart1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-release-subchart1
  labels:
    app: my-web-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-web-app
  template:
    metadata:
      labels:
        app: my-web-app
    spec:
      containers:
        - name: nginx
          image: nginx:stable
