pkg/safeguards/tests/testmanifests/expected-subchart2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-release-subchart2
  labels:
    app: my-web-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-web-app
  template:
    metadata:
      labels:
        app: my-web-app
    spec:
      containers:
        - name: nginx
          image: nginx:stable
