pkg/safeguards/tests/testmanifests/expecteddeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-release-deployment
  namespace: test-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-web-app
  template:
    metadata:
      labels:
        app: my-web-app
    spec:
      containers:
        - name: nginx
          image: nginx:stable
