pkg/safeguards/tests/testmanifests/expectedingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-release-ingress
  namespace: test-namespace
spec:
  rules:
    - host: example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-release-service
                port:
                  number: 80
