pkg/safeguards/tests/testmanifests/expectedingress_flags.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-flags-name-ingress
  namespace: test-flags-namespace
spec:
  rules:
    - host: example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-flags-name-service
                port:
                  number: 80
