pkg/safeguards/tests/testmanifests/expectedservice_flags.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-flags-name-service
  namespace: test-flags-namespace
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: my-web-app
